--- a/ShibugakiViewer/packages.config
+++ b/ShibugakiViewer/packages.config
@@ -14,6 +14,7 @@
   <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net462" />
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net462" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net462" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net462" />
   <package id="XamlAnimatedGif" version="1.1.6" targetFramework="net462" />
